--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,6 @@ body {
 
 .header-navigation {
     display: flex;
-    gap: 76px;
     align-items: center;
 }
 
@@ -81,6 +80,7 @@ body {
     color: #4d5ae5;
     padding-top: 24px;
     padding-bottom: 24px;
+    margin-right: 76px;
 }
 
 .web {
@@ -198,6 +198,7 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    min-width: 169px;
 }
 
 .hero-btn:hover {
@@ -218,7 +219,7 @@ body {
 }
 
 .advantages-section-item {
-    width: calc(100%-72px/4);    
+    width: calc((100%-72px)/4);    
 }
 
 .advantages-section-subtitle {
@@ -264,15 +265,14 @@ body {
     justify-content: center;
     flex-direction: column;
     gap: 8px;
-    padding-bottom: 32px;
-    width: calc(100%-72px/4);
+    width: calc((100%-72px)/4);
+    border-radius: 0 0 4px 4px;
     }
 
 .team-section-img {
     display: block;
     max-width: 100%;
-    margin-bottom: 32px;
-}
+    }
 
 .team-section-subtitle {
     font-weight: 500;
@@ -280,11 +280,19 @@ body {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    text-align: center;
+    margin-bottom: 8px;
 }
 
 .team-section-text {
     line-height: 1.5;
     letter-spacing: 0.02em;
+    text-align: center;
+}
+
+.team-card-text {
+    padding: 32px 0;
+
 }
 
 /*---OUR PORTFOLIO---*/
@@ -304,12 +312,15 @@ body {
 .portfolio-section-list {
     display: flex;
     flex-wrap: wrap;
-    gap: 24px;
+    row-gap: 48px;
+    justify-content: space-between;
+    align-items: space-between;
+    align-content: space-between;
 }
 
 .portfolio-section-item {
     background-color: #fff;
-    width: calc(100%-48px/3);
+    width: calc((100%-48px)/3);    
 }
 
 .portfolio-section-img {
@@ -323,19 +334,22 @@ body {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    border-left: 1px solid #e7e9fc;
-    border-right: 1px solid #e7e9fc;
-    padding: 32px 16px 0 16px;
+    
 }
 
 .portfolio-section-text {
     line-height: 1.5;
     letter-spacing: 0.02em;
-    border-bottom: 1px solid #e7e9fc;
-    border-left: 1px solid #e7e9fc;
-    border-right: 1px solid #e7e9fc;
-    padding: 8px 16px 32px 16px;
+    
 }
+
+.portfolio-card-text {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+    margin-bottom: 8px;
+}
+
 
 /*---FOOTER---*/
 
@@ -353,6 +367,8 @@ body {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+    display: inline-block;
+    margin-bottom: 16px;
     }
 
 .stud {
@@ -370,5 +386,4 @@ body {
     letter-spacing: 0.02em;
     color: #f4f4fd;
     max-width: 264px;
-    margin-top: 16px;
 }
