--- a/css/styles.css
+++ b/css/styles.css
@@ -313,6 +313,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     row-gap: 48px;
+    column-gap: 24px;
     justify-content: space-between;
     align-items: space-between;
     align-content: space-between;
@@ -320,7 +321,7 @@ body {
 
 .portfolio-section-item {
     background-color: #fff;
-    width: calc((100%-48px)/3);    
+    width: calc((100%-48px)/3)
 }
 
 .portfolio-section-img {
@@ -334,7 +335,7 @@ body {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    
+    margin-bottom: 8px;
 }
 
 .portfolio-section-text {
