--- a/css/styles.css
+++ b/css/styles.css
@@ -321,7 +321,8 @@ body {
 
 .portfolio-section-item {
     background-color: #fff;
-    width: calc((100%-48px)/3)
+    
+    width: calc((100%-48px)/3);
 }
 
 .portfolio-section-img {
